force-app/main/default/objects/FaixaRegraDesconto__c/FaixaRegraDesconto__c.object-meta.xml
<CustomObject>
    <label>Faixa Regra de Desconto</label>
    <nameField>
        <displayFormat>FRD-{0000}</displayFormat>
        <label>Faixa Regra de Desconto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Faixas Regras de Desconto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>