force-app/main/default/objects/FaixaRegraDesconto__c/fields/FaixaFinal__c.field-meta.xml
<CustomField>
    <fullName>FaixaFinal__c</fullName>
    <inlineHelpText>Por Quantidade</inlineHelpText>
    <label>Faixa Final</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>