force-app/main/default/objects/FaixaRegraDesconto__c/fields/RegraDesconto__c.field-meta.xml
<CustomField>
    <fullName>RegraDesconto__c</fullName>
    <label>Regra de Desconto</label>
    <referenceTo>RegraDesconto__c</referenceTo>
    <relationshipLabel>Faixas Regras de Desconto</relationshipLabel>
    <relationshipName>Faixas_Regras_de_Desconto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>